--- a/webcrm/templates/navbar.html
+++ b/webcrm/templates/navbar.html
@@ -10,9 +10,12 @@
        <li class="nav-item">
          <a class="nav-link"  href="{% url 'logout'%}">Logout</a>
        </li>
-        {% else%}
+        {% else %}
         <li class="nav-item">
           <a class="nav-link"  href="{% url 'home'%}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  href="{% url 'register'%}">Register</a>
         </li>
           {% endif %}
       </ul>
