--- a/webcrm/templates/home.html
+++ b/webcrm/templates/home.html
@@ -2,9 +2,17 @@
 {% block content %}
     {% if  user.is_authenticated %}
         <div class="col-md-6 offset-md-3">
-            <h1>Home</h1>
+            <h1>Records</h1>
+            {% if records %}
+                {% for record in records %}
+                    {{record}}
+                    {{record.email}}
+                {% endfor %}
+            {% endif %}
+
         <br>
         </div>
+
     {% else %}
         <div class="col-md-6 offset-md-3">
             <h1>Login</h1>
