--- a/webcrm/templates/home.html
+++ b/webcrm/templates/home.html
@@ -1,18 +1,50 @@
 {% extends "base.html" %}
 {% block content %}
     {% if  user.is_authenticated %}
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-9 offset-md-1">
             <h1>Records</h1>
-            {% if records %}
-                {% for record in records %}
-                    {{record}}
-                    {{record.email}}
-                {% endfor %}
-            {% endif %}
-
+<table class="table table-striped table-bordered table-hover">
+    <thead class="table-success">
+        <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Phone</th>
+        <th scope="col">City</th>
+        <th scope="col">Created at</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% if records %}
+        {% for record in records %}
+        <tr>
+            <td>
+                <a href="{% url 'record' record.id %}">{{ record.id }}</a>
+            </td>
+          <td>
+              <a href="{% url 'record' record.id %}">{{ record.id }}
+                {{ record.first_name }} {{ record.last_name }}
+              </a>
+          </td>
+          <td>
+            {{ record.email }}
+          </td>
+          <td>
+            {{ record.phone }}
+          </td>
+          <td>
+            {{ record.city }}
+          </td>
+          <td>
+            {{ record.created_at }}
+          </td>
+        </tr>
+        {% endfor %}
+    {% endif %}
+    </tbody>
+</table>
         <br>
         </div>
-
     {% else %}
         <div class="col-md-6 offset-md-3">
             <h1>Login</h1>
