--- a/webcrm/templates/record.html
+++ b/webcrm/templates/record.html
@@ -14,4 +14,5 @@
     </div>
   </div>
 <a href="{% url 'home' %}" class="btn btn-secondary">Назад</a>
+<a href="{% url 'delete_record' record.id %}" class="btn btn-danger">Удалить</a>
 {% endblock content %}
