--- a/webcrm/templates/home.html
+++ b/webcrm/templates/home.html
@@ -22,7 +22,7 @@
                 <a href="{% url 'record' record.id %}">{{ record.id }}</a>
             </td>
           <td>
-              <a href="{% url 'record' record.id %}">{{ record.id }}
+              <a href="{% url 'record' record.id %}">
                 {{ record.first_name }} {{ record.last_name }}
               </a>
           </td>
